@@ -8,12 +8,11 @@ import com.kitri.web_project.dto.diary.DiaryImgDto;
 import com.kitri.web_project.dto.diary.DiaryMainImg;
 import com.kitri.web_project.dto.diary.PetCalendar;
 import com.kitri.web_project.dto.diary.RequestDiary;
-import com.kitri.web_project.dto.login.ResponseClient;
 import com.kitri.web_project.mappers.UserMapper;
+import com.kitri.web_project.service.BoardService;
+import com.kitri.web_project.service.UserInfoService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.mail.SimpleMailMessage;
-import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
@@ -29,6 +28,15 @@ public class UserInfoController {
 
     @Autowired
     UserMapper userMapper;
+
+
+
+    private final UserInfoService userInfoService;
+
+    @Autowired
+    public UserInfoController(UserInfoService userInfoService){
+        this.userInfoService = userInfoService;
+    }
 
     @GetMapping("/{id}")
     public UserInfo getInfo(@PathVariable String id) {
@@ -61,20 +69,24 @@ public class UserInfoController {
     }
 
     @PostMapping("/updatepw/{id}")
-    public void updateNewPassword(@PathVariable Long id, @RequestBody Map<String, String> passwords) {
+    public boolean updateNewPassword(@PathVariable Long id, @RequestBody Map<String, String> passwords) {
         String currentPassword = passwords.get("currentPassword");
         String newPassword = passwords.get("newPassword");
+        String passwordFind = userMapper.passwordFind(id);
 
-        List<Object> params = Arrays.asList(id, currentPassword, newPassword);
-        userMapper.updateNewPassword(params);
+        if(!Objects.equals(passwordFind, currentPassword))
+            return false;
+        else {
+            List<Object> params = Arrays.asList(id, currentPassword, newPassword);
+            userMapper.updateNewPassword(params);
+            return true;
+        }
     }
 
     @DeleteMapping("/user/{id}")
     public void deleteUser(@PathVariable Long id) {
-
         String imgPath = userMapper.getUserImages(id);
         userMapper.deleteUser(id);
-
         String fullPath = "/D:/imageStore" + imgPath;
         File file = new File(fullPath);
         if (file.exists()) {
@@ -122,11 +134,14 @@ public class UserInfoController {
         long id1 = Long.parseLong(id);
         return userMapper.getDiary(id1);
     }
+    //다이어리 등록 매핑
     @PostMapping
     public void adddiary(@RequestBody RequestDiary diaryInfo) {
         userMapper.save(diaryInfo);
-        for(String s : diaryInfo.getImg()) {
-            userMapper.imageSave(s, diaryInfo.getUserId(),diaryInfo.getPetId(), diaryInfo.getId());
+        if(diaryInfo.getImg() != null) {
+            for (String s : diaryInfo.getImg()) {
+                userMapper.imageSave(s, diaryInfo.getUserId(), diaryInfo.getPetId(), diaryInfo.getId());
+            }
         }
     }
 
@@ -171,7 +186,13 @@ public class UserInfoController {
 
     @GetMapping("/calendar/{id}")
     public List<PetCalendar>petCalendars(@PathVariable long id){
+
         return userMapper.petCalendar(id);
+    }
+    @PostMapping("/updateColor/{petId}") //캘린더 색상 업데이트
+    public void petCalendars(@PathVariable long petId, @RequestBody Map<String, String> requestBody){
+        String color = requestBody.get("color");
+        userMapper.UpdateColor(petId, color);
     }
 
     @GetMapping("/update/{id}") //다이어리 수정 불러오기
@@ -200,7 +221,7 @@ public class UserInfoController {
         // imgPath 데이터만 추출하여 디코딩된 URL 리스트 생성
         List<String> decodedImageUrls = diaryMainImgList.stream()
                 .map(diaryMainImg -> decodeImageUrl(diaryMainImg.getImgPath()))
-                .collect(Collectors.toList());
+                .toList();
 
         // 디코딩된 URL을 다시 imgPath 필드에 할당하여 diaryMainImgList 수정
         for (int i = 0; i < diaryMainImgList.size(); i++) {
@@ -209,6 +230,15 @@ public class UserInfoController {
 
         return diaryMainImgList;
     }
+
+
+
+    @GetMapping("/passVerify/{id}")
+    public boolean passVerify(@PathVariable long id,String password){
+        return userInfoService.passwordVerify(id, password);
+    }
+
+
 
     // URL 디코딩 메서드
     private String decodeImageUrl(String encodedUrl) {
@@ -219,37 +249,7 @@ public class UserInfoController {
                 StandardCharsets.UTF_8);
     }
 
-    @Autowired
-    private JavaMailSender emailSender;
 
-    @PostMapping("/findpassword")
-    public ResponseEntity<String> forgotPassword(@RequestBody String email) {
-        // 사용자가 제공한 이메일로 사용자를 찾습니다.
-        ResponseClient user = userMapper.findByEmail(email);
-        if (user == null) {
-            // 사용자가 존재하지 않는 경우에는 오류 응답을 반환합니다.
-            return ResponseEntity.badRequest().body("User with provided email not found");
-        }
 
-        // 새로운 임시 비밀번호 생성
-        String newPassword = UUID.randomUUID().toString().substring(0, 8);
-        user.setPassword(newPassword);
-
-        // DB에 새로운 비밀번호 저장
-        userMapper.updatePassword(user);
-
-        // 이메일 보내기
-        sendEmail(user.getEmail(), "Your new password", "Your new password is: " + newPassword);
-
-        return ResponseEntity.ok("New password sent to your email");
-    }
-
-    private void sendEmail(String to, String subject, String text) {
-        SimpleMailMessage message = new SimpleMailMessage();
-        message.setTo(to);
-        message.setSubject(subject);
-        message.setText(text);
-        emailSender.send(message);
-    }
 
 }
